[project]
name = "pi0-inout"
version = "0.1.0"
description = "Matmul input/output quantization sweep for Pi0Pytorch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pi0_inout*"]
